Fix documentation again
